Upgrading gems in order to fix two Code Climate security issues

--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -28,7 +28,11 @@ RUN npm install chrome-remote-interface minimist
 RUN apt-get update && apt-get install -y --no-install-recommends \
     imagemagick \
     nodejs \
-    google-chrome-stable
+    google-chrome-stable \
+    autoconf \
+    automake \
+    libtool \
+    libltdl-dev 
 
 #
 # SYSTEM CONFIG
